traces/bug_275.txt
examples++-load/ClosePoints.cpp:234: error: DEAD_STORE
  The value written to &qo01 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/ClosePoints.cpp:234:5: Write of unused value
232.       double * q0=&(Q(0,0));
233.       int qo10 =Q.step*Q.shapei.step;
234.       int qo01 =Q.step*Q.shapej.step;
           ^
235.   
236.       double x0= P(0,':').min();
